--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@
     background-size: cover;
     border-radius: 50px;
 }
-.linked.in {
+.linkedin {
     width: 50px;
     height: 50px;
     background-image: url(linkedIn.png);
